# dj-docker-skeleton

./: .gitignore  Dockerfile  README.md  certbot.dry-run.sh  certbot.run.sh  docker-compose.yml  docker.env  install.docker-compose.sh  poet_runserver.bat  pyproject.toml  restart.dock-nginx.sh
app/: run_csu.sh  run_makemigrations.sh  run_migrate.sh  run_runserver.sh
app/app/: .env.example  settings.py
